# sentinel_2_tif

./: README.md  Untitled.ipynb  environment.yml  pyproject.toml
sentinel_2_tif.egg-info/: PKG-INFO  SOURCES.txt
