[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "sentinel_2_tif"
version     = "0.1.0"
description = "Simplified Sentinel-2 TIF generation and spatial-temporal tools"
authors = [
    {name  = "Chase Kusterer", email = "chase.kusterer24@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "shapely",
    "rioxarray",
    "pystac-client",
    "planetary-computer",
    "odc-stac",
    "tqdm",
    "rasterio",
    "pyproj"
]

[project.optional-dependencies]
dev = ["black", "pytest"]